--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 GOOGLE_API_KEY=AIzaSyDp6sMaVDOCva53AA_yzdGZ9vb2fSDAq-8
+DB_NAME=chat_history_db
+DB_USER=postgres
+DB_PASSWORD=root
+DB_HOST=localhost
+DB_PORT=5432
