--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ google-generativeai==0.8.4
 Matplotlib==3.10.1 
 Seaborn==0.13.2 
 dotenv
-psycopg2==2.9.10
-psycopg2-binary
+pip install psycopg2-binary
+
