--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 GOOGLE_API_KEY=AIzaSyDp6sMaVDOCva53AA_yzdGZ9vb2fSDAq-8
-
+MYSQL_HOST=localhost
+MYSQL_USER=root
+MYSQL_PASSWORD=
+MYSQL_DATABASE=chat_history_db
