--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 GOOGLE_API_KEY=AIzaSyDp6sMaVDOCva53AA_yzdGZ9vb2fSDAq-8
-MYSQL_HOST=localhost
+MYSQL_HOST=127.0.0.1
 MYSQL_USER=root
 MYSQL_PASSWORD=
 MYSQL_DATABASE=chat_history_db
